@@ -101,26 +101,6 @@ EOD;
 		$this->runShell();
 	}
 
-	/**
-	 * Reads input via the readline PHP extension if that's available, or fgets() if readline is not installed.
-	 * @param string $prompt to echo out before waiting for user input
-	 * @return mixed line read as a string, or false if input has been closed
-	 */
-	protected function readline($prompt)
-	{
-		if (extension_loaded('readline'))
-		{
-			$input = readline($prompt);
-			readline_add_history($input);
-			return $input;
-		}
-		else
-		{
-			echo $prompt;
-			return fgets(STDIN);
-		}
-	}
-
 	protected function runShell()
 	{
 		// disable E_NOTICE so that the shell is more friendly
@@ -134,7 +114,7 @@ EOD;
 		$_commands_=$_runner_->commands;
 		$log=Yii::app()->log;
 
-		while(($_line_=$this->readline("\n>> "))!==false)
+		while(($_line_=$this->prompt("\n>>"))!==false)
 		{
 			$_line_=trim($_line_);
 			if($_line_==='exit')
